user page, forgot to make branch. oops

--- a/404.html
+++ b/404.html
@@ -7,10 +7,11 @@
     <title>PAGE NOT FOUND</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body onload = 'redirect()'>
 <h1>404 Not Found</h1>
 <p>We're sorry, this resource is not found</p>
 <img src="public\images\sadCart.png" class="404">
 <a href="/" class="btn">Go back</a>
+<script src = '/js/main.js'></script>
 </body>
 </html>
